Edit MainActivity.java 2(runOnThread) Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Project13_1</string>
     <string name="btn_start">듣기</string>
-    <string name="btn_pause">일시정지</string>
+    <string name="btn_pause">일시중지</string>
     <string name="btn_stop">중지</string>
     <string name="text_music">실행중인 음악: </string>
     <string name="text_time">진행시간: </string>
